--- a/mat383/assets/style.css
+++ b/mat383/assets/style.css
@@ -524,6 +524,9 @@ svg{
 .smallpost{
 	width: 40%;
 	max-width: 45%;
+	.postpreviewtitle{
+		font-weight: normal;
+	}
 }
 
 .postpreview{
@@ -565,7 +568,7 @@ svg{
 	position:absolute;
 	width: calc(100% - 60px);
 	padding:15px 30px 10px;
-	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+	text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.7);
 }
 .postpreviewbackground{
 	width:100%;
@@ -609,6 +612,7 @@ svg{
 	font-size:14px;
 	margin-top:-8px;
 	opacity:0.75;
+	text-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
 }
 
 
