--- a/mat383/layouts/partials/list.html
+++ b/mat383/layouts/partials/list.html
@@ -1,39 +1,5 @@
-<div class="posts">
+<div class="postscontainer">
 	{{- range .Pages }}
-		<a href="{{ .RelPermalink }}" class="postpreviewlink">
-			<div class="postpreview">
-				{{ if .Params.coverimg }}
-					<div class="postpreviewcoverimg">
-					<div class="postpreviewcoverimg2">
-						<picture>
-							<source srcset="/images/thumbnails/{{ .Params.coverimg }}.{{ .Params.coverimgmaintype }}" type="image/{{ .Params.coverimgmaintype }}">
-							<img src="/images/thumbnails/{{ .Params.coverimg }}.jpg" width="400" height="200">
-						</picture>
-					</div>
-					</div>
-				{{ end }}
-				<div class="postpreviewtext">
-					<div class="postpreviewtimetags">
-						<div class="postpreviewtime">
-							{{- if .Param "datesinlist" -}}
-								<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "2006 Jan 02" }}</time>
-							{{- end -}}
-						</div>
-						<div class="postpreviewtags">
-							{{ partial "taglist2.html" . }}{{ if .Param "taglist" }}{{ end -}}
-						</div>
-					</div>
-					
-					<div class="postpreviewtitle">
-						{{ .Title }}
-					</div>
-					{{ if .Params.summary }}
-						<div class="postpreviewsummary">
-							{{ .Params.summary }}
-						</div>
-					{{ end }}
-				</div>
-			</div>
-		</a>
+		{{ partial "postpreview.html" . }}
 	{{- end }}
 </div>
